# Summary

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SUMMARY.md  Summary.diff  Summary.md  build.rs
Source/: Library.rs  main.rs
Source/Fn/: Summary.rs
Source/Fn/Binary/: Command.rs
Source/Fn/Binary/Command/: Entry.rs  Parallel.rs  Sequential.rs
Source/Fn/Summary/: Difference.rs  First.rs  Group.rs  Insert.rs  Release.rs
Source/Fn/Summary/Insert/: Hash.rs
Source/Struct/: mod.rs
Source/Struct/Binary/: Command.rs
Source/Struct/Binary/Command/: Entry.rs  Option.rs
Source/Struct/Summary/: Difference.rs  mod.rs
