[[bin]]
name = "PSummary"
path = "Source/Library.rs"

[[bin]]
name = "Summary"
path = "Source/Library.rs"

[dependencies]
clap = { features = ["derive"], version = "4.5.11" }
walkdir = "2.5.0"
futures = "0.3.30"
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["full"] }
git2 = { version = "0.19.0" }
num_cpus = "1.16.0"
regex = "1.10.5"
dashmap = "6.0.1"
itertools = "0.13.0"
diff = "0.1.13"
prettytable-rs = "0.10.0"

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.17"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Summary"
description = "🗣️ Summary —"
license = "MIT"
name = "psummary"
repository = "https://github.com/PlayForm/Summary.git"
version = "0.1.1"
edition = "2021"
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]
