[[bin]]
name = "PSummary"
path = "Source/Library.rs"

[[bin]]
name = "Summary"
path = "Source/Library.rs"

[dependencies]
clap = { features = ["derive"], version = "4.5.20" }
walkdir = "2.5.0"
futures = "0.3.31"
rayon = "1.10.0"
tokio = { version = "1.41.0", features = ["full"] }
git2 = { version = "0.19.0" }
num_cpus = "1.16.0"
regex = "1.11.0"
dashmap = "6.1.0"
itertools = "0.13.0"
chrono = "0.4.38"
# pieces = { version = "1.0.0", path = "../Pieces" }

[build-dependencies]
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.8.19"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "Library"
path = "Source/Library.rs"

[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Summary"
description = "🗣️ Summary —"
license = "MIT"
name = "psummary"
repository = "https://github.com/PlayForm/Summary.git"
version = "0.1.4"
edition = "2021"
include = [
	"Source/**/*",
	"LICENSE",
	"README.md",
	"CHANGELOG.md",
	"build.rs",
	"Cargo.toml",
]
